# pysmali

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
smali/: __init__.py  attributes.py  block.py  exceptions.py  literals.py  modifiers.py  qualifiers.py  smali_file.py  statements.py  tokens.py  utils.py
smali/lib/: peekable.py  smali_compare.py
smali/tests/: README.md  generate_tests.py  test_smali_file.py  tests.tar.xz
tests/: .gitignore  README.md  generate_tests.py  requirements.txt  run_tests.py
