[metadata]
name = smali
version = file: VERSION
author = Anonymous
description = A library for parsing and unparsing smali files for programatic modification
keywords = smali,parser,unparser,formatter,java,android,apk
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UnknownCollections/pysmali
license = Unlicense
license_file = LICENSE.txt
project_urls =
    Bug Tracker = https://github.com/UnknownCollections/pysmali/issues
    Documentation = https://github.com/UnknownCollections/pysmali/wiki
    Source = https://github.com/UnknownCollections/pysmali
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Assemblers
    Topic :: Software Development :: Build Tools
    Topic :: Software Development :: Compilers
    Topic :: Software Development :: Disassemblers
    Topic :: Software Development :: Interpreters
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Java Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Pre-processors

[options]
packages = find:
install_requires =
    tqdm~=4.59.0
    cryptography~=3.4.6
    more-itertools~=8.7.0
include_package_data = True
python_requires = >=3.8
zip_safe = True